--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-torch==2.0.1+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1
 streamlit==1.38.0
 numpy==2.2.6
 faiss-cpu
