--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 
 streamlit==1.45.1
-numpy==1.26.4
+numpy==1.26.4; sys_platform != "fake"
 faiss-cpu
 sentence-transformers==2.2.2
 requests
