--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
---index-url https://pypi.org/simple
---extra-index-url https://download.pytorch.org/whl/cpu
-
 streamlit==1.45.1
-numpy==1.26.4; sys_platform != "fake"
+numpy==1.26.4
 faiss-cpu
 sentence-transformers==2.2.2
 requests
 python-dotenv==1.1.0
 huggingface-hub==0.14.1
+
 torch==2.0.1
+--extra-index-url https://download.pytorch.org/whl/cpu
